--- a/_config.yml
+++ b/_config.yml
@@ -260,9 +260,9 @@ tag_archive:
 #     - categories
 #     - tags
 
-layouts:
-     category: archive-taxonomy
-     tag: archive-taxonomy
+# layouts:
+#     category: archive-taxonomy
+#     tag: archive-taxonomy
 #   permalinks:
 #     category: /categories/:name/
 #     tag: /tags/:name/
