--- a/_config.yml
+++ b/_config.yml
@@ -217,7 +217,7 @@ sass:
 # Outputting
 permalink: /:categories/:title/
 paginate: 3 # amount of posts to show
-paginate_path: /page:num/posts
+paginate_path: /page:num/_posts/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
