--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Anand Dev Ranjan"
   avatar           : "/assets/images/my_photo.JPG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **experimental physicist** working in area of optics. My current research interests is the study and application of microbubbles formed using optical tweezers."
+  bio              : "Junior Research Fellow"
   location         : "IISER Kolkata"
   email            :
   links:
