--- a/navigation.yml
+++ b/navigation.yml
@@ -1,10 +1,11 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
+  - title: "Home"
+    url: https://anandevranjan.github.io/
+  
+  - title: "Publications"
+    url: https://anandevranjan.github.io/categories/#publications
+  #- title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
