--- a/navigation.yml
+++ b/navigation.yml
@@ -4,10 +4,10 @@ main:
     url: https://anandevranjan.github.io/
   
   - title: "Publications"
-    url: https://anandevranjan.github.io/categories/#publications
-  #- title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+    url: https://anandevranjan.github.io/categories/publications/
+  - title: "Sample Posts"
+    url: /year-archive/
+  - title: "Sample Collections"
+    url: /collection-archive/
+  - title: "Sitemap"
+    url: /sitemap/
